fixing collapse content color for classic

--- a/src/components/modus-wc-collapse/modus-wc-collapse.scss
+++ b/src/components/modus-wc-collapse/modus-wc-collapse.scss
@@ -64,6 +64,7 @@ modus-wc-collapse .modus-wc-collapse {
 
 [data-theme='modus-classic-light'] modus-wc-collapse .modus-wc-collapse {
   background-color: var(--modus-wc-color-white);
+  color: inherit;
 
   &.modus-wc-collapse-arrow.modus-wc-collapse-open {
     border-left: var(--modus-wc-spacing-xs) solid
@@ -78,6 +79,8 @@ modus-wc-collapse .modus-wc-collapse {
 }
 
 [data-theme='modus-classic-dark'] modus-wc-collapse .modus-wc-collapse {
+  color: inherit;
+
   &.modus-wc-collapse-arrow.modus-wc-collapse-open {
     border-left: var(--modus-wc-spacing-xs) solid
       var(--modus-wc-color-highlight-blue);
